build: add commitlint as first build stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ branches:
     - /^greenkeeper.*$/
 
 stages:
+  - commitlint
   - test
   - name: release
     if: branch = master AND type IN (push)
