--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ node_js:
   - '9'
   - '10'
 
-# Trigger a push build on master and greenkeeper branches + PRs build on every branches
-# Avoid double build on PRs (See https://github.com/travis-ci/travis-ci/issues/1147)
+# Trigger a push build on master, dev and greenkeeper branches + PRs build on
+# every branches. Avoid double build on PRs (See https://github.com/travis-ci/travis-ci/issues/1147)
 branches:
   only:
     - master
+    - dev
     - /^greenkeeper.*$/
 
 stages:
