--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "@commitlint/config-conventional": "^6.1.3",
     "@commitlint/prompt-cli": "^6.1.3",
     "@commitlint/travis-cli": "^6.1.3",
+    "@semantic-release/changelog": "^2.0.1",
+    "@semantic-release/github": "^4.2.13",
+    "@semantic-release/npm": "^3.2.4",
     "@types/node": "^8.10.10",
     "ava": "^0.25.0",
     "codecov": "^3.0.1",
@@ -99,6 +102,29 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
+    ]
+  },
+  "release": {
+    "verifyConditions": [
+      "@semantic-release/github",
+      "@semantic-release/npm"
+    ],
+    "prepare": [
+      {
+        "path": "@semantic-release/changelog",
+        "changelogFile": "CHANGELOG.md"
+      },
+      "@semantic-release/npm"
+    ],
+    "publish": [
+      "@semantic-release/npm",
+      "@semantic-release/github"
+    ],
+    "success": [
+      "@semantic-release/github"
+    ],
+    "fail": [
+      "@semantic-release/github"
     ]
   }
 }
